<resources>
    <string name="app_name">Productos</string>
    <string name="men_principal">Menú Principal</string>
    <string name="elija_una_opci_n">Elija una opción</string>
    <string name="lista_productos">Lista Productos</string>
    <string name="lugares_de_inter_s">Lugares de Interés</string>
    <string name="preferencias">Preferencias</string>
    <string name="salir">Salir</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="nombre">Nombre:</string>
    <string name="categoria">Categoria:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="guardar">Guardar</string>
    <string name="menu_registro">menu_registro</string>
    <string name="Flugares_de_inter_s">Lugares de Interés</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="lugar_de_compra">Lugar de Compra:</string>
</resources>